[package]
name = "hpx-middleware"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpx-context = { path = "../context" }
hpx-error = { path = "../error" }
hpx-sampling = { path = "../sampling" }
hpx-tracing = { path = "../tracing" }
log = "0.4.11"
rand = "0.8.0"
hyper = { version = "0.14", features = ["client"] }
uuid = { version = "0.8", features = ["v4"] }
