[package]
name = "hpx-register"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpx-forward = { path = "../forward" }
hpx-route = { path = "../route" }
hpx-error = { path = "../error" }
hpx-context = { path = "../context" }
hyper = { version = "0.14", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1", features = ["rt", "time", "net", "sync", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false }
pin-project = "1"
log = "0.4.11"